--- a/template/index.html
+++ b/template/index.html
@@ -9,61 +9,64 @@
 </head>
 
 <body>
+    <META HTTP-EQUIV="refresh" CONTENT="30">
     <h1>Base de données Evènements</h1>
 
-    <table>
+    <ul>
         {{#db}}
-        <tr>{{name}}
-            <td>{{place}}</td>
-        </tr>
+        <li>{{name}} / {{place}}</li>
         {{/db}}
-    </table>
+    </ul>
 
     <form method="POST" action="/event/add">
         <label for="name">Name</label>
-        <input id="name" name="name" type="text">
+        <input id="name" name="name" type="text" />
         <label for="place">Place</label>
-        <input id="place" name="place" type="text">
-        <input type="submit" id="submit" value="Submit">
+        <input id="place" name="place" type="text" />
+        <input type="submit" id="submit" value="Submit" />
     </form>
-</body>
-<script>
-    let submit = (document.querySelector("#submit")).addEventListener("click", function(e) {
-        e.preventDefault();
-        let name = document.querySelector('#name').value;
-        let place = document.querySelector('#place').value;
-        let parma = "name=" + name + "&place=" + place;
-        console.log('TEst');
-        let xhr = new XMLHttpRequest();
-        xhr.open('POST', '/event/add', true);
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState === XMLHttpRequest.DONE) {
-                if (xhr.status === 200) {
-                    console.log("TEst");
-                    console.log(xhr.response);
-                } else {
-                    console.error('unexpected status code:', this.status);
-                }
-            }
-        };
-        xhr.send(parma);
-    });
 
-    setInterval(function() {
-        let xhr = new XMLHttpRequest();
-        xhr.open('GET', '/', true);
-        xhr.onreadystatechange = function() {
-            if (xhr.readyState === XMLHttpRequest.DONE) {
-                if (xhr.status === 200) {
-                    xhr.response;
-                    console.log(xhr.response);
-                } else {
-                    console.error('unexpected status code:', this.status);
+    <script>
+        document.querySelector("#submit").addEventListener("click", function(e) {
+            e.preventDefault();
+            let name = document.querySelector('#name').value;
+            let place = document.querySelector('#place').value;
+            let params = "name=" + name + "&place=" + place;
+            console.log(params);
+            console.log('Test');
+            let xhr = new XMLHttpRequest();
+            xhr.open('POST', '/event/add', true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    if (xhr.status === 200) {
+                        console.log("Tdest");
+                        console.log(xhr.response);
+                    } else {
+                        console.error('unexpected status code:', this.status);
+                    }
                 }
-            }
-        };
-        xhr.send(null);
-    }, 500)
-</script>
+            };
+            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+            xhr.send(params);
+        });
+
+        setInterval(function() {
+            let xhr = new XMLHttpRequest();
+            xhr.open('GET', '/', true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    if (xhr.status === 200) {
+                        //xhr.response;
+                        //console.log(xhr.response);
+                    } else {
+                        console.error('unexpected status code:', this.status);
+                    }
+                }
+            };
+            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+            xhr.send(null);
+        }, 500);
+    </script>
+</body>
 
 </html>
