--- a/template/index.html
+++ b/template/index.html
@@ -12,11 +12,12 @@
     <META HTTP-EQUIV="refresh" CONTENT="30">
     <h1>Base de données Evènements</h1>
 
-    <ul>
-        {{#db}}
-        <li>{{name}} / {{place}}</li>
-        {{/db}}
-    </ul>
+
+    {{#db}}
+    <h2>{{name}}</h2>
+    <p>{{place}}</p>
+    <input type="submit" id="delete" value="Delete" /> {{/db}}
+
 
     <form method="POST" action="/event/add">
         <label for="name">Name</label>
@@ -66,6 +67,23 @@
             xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
             xhr.send(null);
         }, 500);
+
+        document.querySelector("#delete").addEventListener("click", function(e) {
+            e.preventDefault();
+            let xhr = new XMLHttpRequest();
+            xhr.open('DELETE', '/event/del', true);
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    if (xhr.status === 200) {
+                        console.log(xhr.response);
+                    } else {
+                        console.error('unexpected status code:', this.status);
+                    }
+                }
+            };
+            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+            xhr.send(null);
+        });
     </script>
 </body>
 
